--- a/C/week1/CMakeLists.txt
+++ b/C/week1/CMakeLists.txt
@@ -16,3 +16,4 @@ add_executable(hogerLager hogerLager.c)
 add_executable(priemgetallen priemgetallen.c)
 add_executable(strings strings.c)
 add_executable(arrays arrays.c)
+add_executable(asciiTabel asciiTabel.c)
