--- a/C/week3/CMakeLists.txt
+++ b/C/week3/CMakeLists.txt
@@ -5,10 +5,19 @@ set(CMAKE_C_STANDARD 99)
 
 set(SOURCE_FILES main.c)
 add_executable(week3 ${SOURCE_FILES})
-add_executable(pointerlus pointerlus.c)
-add_executable(pointer2doef pointer2doef.c)
-add_executable(heap heap.c)
-add_executable(dynamischePointers dynamischePointers.c)
-add_executable(callByRef callByRef.c)
-add_executable(wisselFunctie wisselFunctie.c)
-add_executable(verhoogGetallen verhoogGetallen.c)
+add_executable(formule1_1 formule1_1.c)
+add_executable(oefstruct oefstruct.c)
+add_executable(recursie recursie.c)
+add_executable(recursieMachten recursieMachten.c)
+add_executable(recursieMatroesjka recursieMatroesjka.c)
+add_executable(structBMI structBMI.c)
+add_executable(structDynamisch structDynamisch.c)
+add_executable(structKaart1 structKaart1.c)
+add_executable(structKaart2 structKaart2.c)
+add_executable(structNietDynamisch structNietDynamisch.c)
+add_executable(structures structures.c)
+add_executable(recursieStringReverse recursieStringReverse.c)
+add_executable(recursieFaculteit recursieFaculteit.c)
+add_executable(structKaartDynamisch structKaartDynamisch.c)
+
+
