Added complex data structures

--- a/C/week4/CMakeLists.txt
+++ b/C/week4/CMakeLists.txt
@@ -11,4 +11,10 @@ add_executable(stackArray stackArray.c)
 add_executable(stackLinked stackLinked.c)
 add_executable(queueArray queueArray.c)
 add_executable(queueLinked queueLinked.c)
+add_executable(ariadneWire ariadneWire.c)
+add_executable(mapArray mapArray.c)
+add_executable(hashfunction hashfunction.c)
+add_executable(hashMap hashMap.c)
+add_executable(hashMapCollisionFree hashMapCollisionFree.c)
+add_executable(binarySearchTree binarySearchTree.c)
 add_executable(compareArrays compareArrays.c)
