--- a/C/week2/CMakeLists.txt
+++ b/C/week2/CMakeLists.txt
@@ -8,4 +8,6 @@ add_executable(week2 ${SOURCE_FILES})
 add_executable(pointers pointers.c)
 add_executable(randomPointers randomPointers.c)
 add_executable(pointersArrays pointersArrays.c)
+add_executable(tabelShuffleMean tabelShuffleMean.c)
+add_executable(schaakbord schaakbord.c)
 add_executable(tekeningen tekeningen.c)
