--- a/C/week5/CMakeLists.txt
+++ b/C/week5/CMakeLists.txt
@@ -12,4 +12,5 @@ add_executable(merge merge.c)
 add_executable(quickSort quickSort.c)
 add_executable(linearSearch linearSearch.c)
 add_executable(binarySearch binarySearch.c)
+add_executable(studentRecords studentRecords.c)
 add_executable(bubbleSort bubbleSort.c)
