--- a/C/week1/CMakeLists.txt
+++ b/C/week1/CMakeLists.txt
@@ -16,4 +16,5 @@ add_executable(hogerLager hogerLager.c)
 add_executable(priemgetallen priemgetallen.c)
 add_executable(strings strings.c)
 add_executable(arrays arrays.c)
+add_executable(2darray 2darray.c)
 add_executable(asciiTabel asciiTabel.c)
