--- a/C/week2/CMakeLists.txt
+++ b/C/week2/CMakeLists.txt
@@ -10,4 +10,5 @@ add_executable(randomPointers randomPointers.c)
 add_executable(pointersArrays pointersArrays.c)
 add_executable(tabelShuffleMean tabelShuffleMean.c)
 add_executable(schaakbord schaakbord.c)
+add_executable(verkoop verkoop.c)
 add_executable(tekeningen tekeningen.c)
