--- a/C/week4/CMakeLists.txt
+++ b/C/week4/CMakeLists.txt
@@ -17,6 +17,9 @@ add_executable(hashfunction hashfunction.c)
 add_executable(hashMap hashMap.c)
 add_executable(hashMapCollisionFree hashMapCollisionFree.c)
 add_executable(binarySearchTree binarySearchTree.c)
-add_executable(setUnique setUnique.c)
 add_executable(tree tree.c)
+add_executable(stackArrayTest stackArrayTest.c)
+add_executable(arraylistTest arraylistTest.c)
+add_executable(treeSet treeSet.c)
+add_executable(verkoop verkoop.c)
 add_executable(compareArrays compareArrays.c)
