--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,18 @@ $RECYCLE.BIN/
 *cmake-build-debug*
 *.cache
 
+# ASP.NET
+[Oo]bj
+[Bb]in
+*.user
+*.suo
+*.[Cc]ache
+*.bak
+*.ncb
+*.log 
+*.DS_Store
+[Tt]humbs.db 
+_ReSharper.*
+*.resharper
+Ankh.NoLoad
+
